<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_logged" android:visible="false">

        <item
            android:id="@+id/menu_ads"
            android:title="@string/my_items"
            android:orderInCategory="100"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:orderInCategory="200"
            app:showAsAction="never"/>


    </group>

    <group android:id="@+id/group_notLogged" android:visible="false">

    <item
        android:id="@+id/menu_login_register"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/login_register" />

    </group>
</menu>